--- a/posenet/demos/.babelrc
+++ b/posenet/demos/.babelrc
@@ -11,8 +11,9 @@
         }
       }
     ]
-    ],
+  ],
     "plugins": [
-      ["transform-runtime", {"polyfill": false}]
+      ["transform-runtime", {"polyfill": false}],
+      "babel-plugin-syntax-object-rest-spread",
     ]
 }
