Revert "WIP: babel still doesn't understand js exports and imports"
This reverts commit 8e56c81085684cb232dd044ea63de84fd550e4c6.

--- a/posenet/demos/.babelrc
+++ b/posenet/demos/.babelrc
@@ -1,23 +1,19 @@
 {
   "presets": [
-    "@babel/preset-typescript",
     [
-      "@babel/env",
+      "env",
       {
+        "esmodules": false,
         "targets": {
           "browsers": [
             "> 3%"
           ]
-        },
-
-        "modules":  "cjs"
+        }
       }
-    ],
+    ]
   ],
     "plugins": [
-      ["@babel/transform-runtime", {}],
-      "@babel/plugin-proposal-object-rest-spread",
-      "@babel/plugin-proposal-export-namespace-from",
-      "@babel/transform-modules-commonjs"
+      ["transform-runtime", {"polyfill": false}],
+      "babel-plugin-syntax-object-rest-spread",
     ]
 }
