--- a/posenet/demos/package.json
+++ b/posenet/demos/package.json
@@ -11,32 +11,25 @@
   "dependencies": {
     "@tensorflow-models/posenet": "^2.1.1",
     "@tensorflow/tfjs": "^1.1.2",
-    "@tensorflow/tfjs-converter": "~1.2.1",
-    "@tensorflow/tfjs-core": "~1.2.1",
     "stats.js": "^0.17.0"
   },
   "scripts": {
     "watch": "cross-env NODE_ENV=development parcel index.html --no-hmr --open ",
     "build": "cross-env NODE_ENV=production parcel build index.html --public-url ./",
     "build-camera": "cross-env NODE_ENV=production parcel build camera.html --public-url ./",
-    "test": "babel-node  --extensions '.ts,.tsx' run_tests.ts",
+    "test": "ts-node run_tests.ts",
     "lint": "eslint ."
   },
   "browser": {
     "crypto": false
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.5.0",
-    "@babel/node": "^7.5.0",
-    "@babel/plugin-proposal-export-namespace-from": "~7.0.0",
-    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-modules-commonjs": "~7.0.0",
-    "@babel/plugin-transform-runtime": "~7.0.0",
-    "@babel/polyfill": "~7.0.0",
-    "@babel/preset-env": "~7.0.0",
-    "@babel/preset-typescript": "^7.0.0",
-    "@babel/register": "~7.0.0",
+    "babel-core": "^6.26.3",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-runtime": "~6.23.0",
+    "babel-polyfill": "~6.26.0",
+    "babel-preset-env": "~1.7.0",
+    "babel-preset-es2017": "^6.24.1",
     "clang-format": "~1.2.2",
     "cross-env": "^5.2.0",
     "dat.gui": "^0.7.2",
@@ -44,7 +37,8 @@
     "eslint-config-google": "^0.9.1",
     "jasmine": "^3.2.0",
     "jasmine-core": "~3.1.0",
-    "parcel-bundler": "~1.12.3",
+    "parcel-bundler": "~1.10.3",
+    "ts-node": "~5.0.0",
     "yalc": "~1.0.0-pre.27"
   },
   "eslintConfig": {
