--- a/posenet/demos/package.json
+++ b/posenet/demos/package.json
@@ -24,6 +24,7 @@
     "crypto": false
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.3",
     "babel-core": "^6.26.3",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-runtime": "~6.23.0",
@@ -32,7 +33,7 @@
     "babel-preset-es2017": "^6.24.1",
     "clang-format": "~1.2.2",
     "cross-env": "^5.2.0",
-    "dat.gui": "^0.7.2",
+    "dat.gui": "^0.7.6",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
     "jasmine": "^3.2.0",
