--- a/posenet/tsconfig.json
+++ b/posenet/tsconfig.json
@@ -7,7 +7,7 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "declaration": true,
-    "target": "es5",
+    "target": "es6",
     "lib": ["es2015", "dom"],
     "outDir": "./dist",
     "noUnusedLocals": true,
@@ -18,6 +18,7 @@
     "pretty": true,
     "noFallthroughCasesInSwitch": true,
     "allowUnreachableCode": false,
+    "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true
   },
   "include": [
