--- a/posenet/demos/package.json
+++ b/posenet/demos/package.json
@@ -9,9 +9,6 @@
     "node": ">=8.9.0"
   },
   "dependencies": {
-    "@tensorflow-models/posenet": "^2.1.1",
-    "@tensorflow/tfjs": "^1.1.2",
-    "stats.js": "^0.17.0"
   },
   "scripts": {
     "watch": "cross-env NODE_ENV=development parcel index.html --no-hmr --open ",
@@ -24,6 +21,13 @@
     "crypto": false
   },
   "devDependencies": {
+    "@tensorflow-models/posenet": "^2.1.3",
+    "@tensorflow/tfjs": "^1.1.5",
+    "@tensorflow/tfjs-core": "=1.2.5",
+    "@tensorflow/tfjs-converter": "=1.2.5",
+    "rollup": "~0.60.0",
+    "stats.js": "^0.17.0",
+    "seedrandom": "~2.4.3",
     "@types/dat.gui": "^0.7.3",
     "babel-core": "^6.26.3",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
