--- a/posenet/demos/package.json
+++ b/posenet/demos/package.json
@@ -29,6 +29,7 @@
     "stats.js": "^0.17.0",
     "seedrandom": "~2.4.3",
     "@types/dat.gui": "^0.7.3",
+    "@types/jasmine": "~2.5.53",
     "babel-core": "^6.26.3",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-runtime": "~6.23.0",
