--- a/posenet/demos/package.json
+++ b/posenet/demos/package.json
@@ -8,8 +8,7 @@
   "engines": {
     "node": ">=8.9.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "scripts": {
     "watch": "cross-env NODE_ENV=development parcel index.html --no-hmr --open ",
     "build": "cross-env NODE_ENV=production parcel build index.html --public-url ./",
@@ -23,11 +22,8 @@
   "devDependencies": {
     "@tensorflow-models/posenet": "^2.1.3",
     "@tensorflow/tfjs": "^1.1.5",
-    "@tensorflow/tfjs-core": "=1.2.5",
     "@tensorflow/tfjs-converter": "=1.2.5",
-    "rollup": "~0.60.0",
-    "stats.js": "^0.17.0",
-    "seedrandom": "~2.4.3",
+    "@tensorflow/tfjs-core": "=1.2.5",
     "@types/dat.gui": "^0.7.3",
     "@types/jasmine": "~2.5.53",
     "babel-core": "^6.26.3",
@@ -44,7 +40,11 @@
     "jasmine": "^3.2.0",
     "jasmine-core": "~3.1.0",
     "parcel-bundler": "~1.10.3",
+    "rollup": "~0.60.0",
+    "seedrandom": "~2.4.3",
+    "stats.js": "^0.17.0",
     "ts-node": "~5.0.0",
+    "vptree": "^1.0.0",
     "yalc": "~1.0.0-pre.27"
   },
   "eslintConfig": {
