--- a/posenet/tsconfig.json
+++ b/posenet/tsconfig.json
@@ -8,7 +8,7 @@
     "preserveConstEnums": true,
     "declaration": true,
     "target": "es6",
-    "lib": ["es2015", "dom"],
+    "lib": ["dom", "es2017"],
     "outDir": "./dist",
     "noUnusedLocals": true,
     "noImplicitReturns": true,
