--- a/posenet/demos/package.json
+++ b/posenet/demos/package.json
@@ -8,7 +8,11 @@
   "engines": {
     "node": ">=8.9.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@tensorflow/tfjs-node": "^1.2.7",
+    "botkit": "^4.5.0",
+    "canvas": "^2.6.0"
+  },
   "scripts": {
     "watch": "cross-env NODE_ENV=development parcel index.html --no-hmr --open ",
     "build": "cross-env NODE_ENV=production parcel build index.html --public-url ./",
@@ -21,7 +25,7 @@
   },
   "devDependencies": {
     "@tensorflow-models/posenet": "^2.1.3",
-    "@tensorflow/tfjs": "^1.1.5",
+    "@tensorflow/tfjs": "^1.2.7",
     "@tensorflow/tfjs-converter": "=1.2.5",
     "@tensorflow/tfjs-core": "=1.2.5",
     "@types/dat.gui": "^0.7.3",
@@ -40,7 +44,7 @@
     "jasmine": "^3.2.0",
     "jasmine-core": "~3.1.0",
     "parcel-bundler": "~1.10.3",
-    "rollup": "~0.60.0",
+    "rollup": "^1.19.4",
     "seedrandom": "~2.4.3",
     "stats.js": "^0.17.0",
     "ts-node": "~5.0.0",
